[package]
name = "rseq_rs"
version = "0.1.0"
authors = ["Kitlith <kitlith@kitl.pw>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
lalrpop = { version = "0.18.1", features = ["lexer"] }

[dependencies]
num-traits = "0.2"
num-derive = "0.3"
structopt = "0.3"
cookie-factory = "0.3"
midly = "0.4"
lalrpop-util = "0.18.1"
regex = "1"
lazy_static = "1.4.0"
arrayvec = "0.5.1"

[dependencies.nom]
version = "5.1"
default-features = false
features = ["std"]
